--- a/index.html
+++ b/index.html
@@ -1,10 +1,287 @@
 <!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>无标题文档</title>
-</head>
+<html lang="zh-CN">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<body>
-</body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>现代浏览器博物馆</title>
+		
+		<style>			
+			body {
+				padding-top: 50px;
+				padding-bottom: 40px;
+				color: #5a5a5a;
+			}
+			.carousel {
+				height: 500px; 
+				background-color: #000000;
+				margin-bottom: 60px;
+			}			
+			.carousel-item {
+				height: 500px; 
+				background-color: #000000;
+			}
+			.carousel-item .img {
+				width: 100%;
+			} 
+			.carousel-caption {
+				z-index: 10;
+			}
+			.carousel-caption p {
+				margin-bottom: 20px;
+				font-size: 20px;
+				line-height: 1.8;
+			}
+			.summary {
+				padding-left: 15px;
+			}
+			.summary .col-md-4 {
+				padding-bottom: 20px;
+				text-align: center;
+			}
+			.feature-divider {
+				margin: 40px, 0;
+			}
+			.feature {
+				padding: 30px 0;
+			}
+			.feature-heading {
+				font-size: 50px;
+				color: #2a6496;
+			}
+			.feature-heading .text-muted {
+				font-size: 28px;
+			}
+		</style>
+		
+  </head>	
+  <body>		
+		
+		<!--  顶部导航  -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+			<div class="container"> <a class="navbar-brand" href="#">现代浏览器博物馆</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active"> <a class="nav-link" href="#">综述 <span class="sr-only">(current)</span></a> </li>
+						<li class="nav-item"> <a class="nav-link" href="#">简述</a> </li>
+						<li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 特点 </a>
+							<div class="dropdown-menu" id="dropdown-menu-nav" aria-labelledby="navbarDropdown"> 
+								<a class="dropdown-item" id="chrome" href="#">Chrome</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" id="firefox" href="#">Firefox</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" id="safari" href="#">Safari</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" id="opera" href="#">Opera</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" id="ie" href="#">IE</a> </div>
+						</li>
+						<li class="nav-item"> <a class="nav-link" href="#" data-toggle="modal" data-target="#modal-about">关于</a> </li>
+					</ul>
+					<form class="form-inline my-2 my-lg-0">
+						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
+					</form>
+				</div>
+			</div>
+		</nav>
+		<!--	广告轮播	-->
+		<div class="bd-example" id="carousel-browser">
+    	<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active"> <img src="images/chrome-big.jpg" class="d-block w-100" alt="1 slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h1>Chrome</h1>
+							<p>Google Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。</p>
+							<p><a class="btn btn-lg btn-primary" href="http://www.google.cn/intl/zh-CN/chrome/browser/" role="button" target="_blank">点我下载</a></p>
+						</div>
+					</div>
+					<div class="carousel-item"> <img src="images/firefox-big.jpg" class="d-block w-100" alt="2 slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h1>Firefox</h1>
+							<p>Mozilla Firefox，中文名通常称为“火狐”或“火狐浏览器”，是一个开源网页浏览器。</p>
+							<p><a class="btn btn-lg btn-primary" href="http://www.firefox.com.cn/download/" target="_blank" role="button">点我下载</a></p>
+						</div>
+					</div>
+					<div class="carousel-item"> <img src="images/opera-big.jpg" class="d-block w-100" alt="3 slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h1>Safari</h1>
+							<p>Safari，是苹果计算机的最新操作系统Mac OS X中的浏览器。</p>
+							<p><a class="btn btn-lg btn-primary" href="http://www.apple.com/cn/safari/" target="_blank"
+										role="button">点我下载</a></p>
+						</div>
+					</div>
+					<div class="carousel-item"> <img src="images/safari-big.jpg" class="d-block w-100" alt="4 slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h1>Opera</h1>
+							<p>Opera浏览器，是一款挪威Opera Software ASA公司制作的支持多页面标签式浏览的网络浏览器。</p>
+							<p><a class="btn btn-lg btn-primary" href="http://www.opera.com/zh-cn" target="_blank"
+										role="button">点我下载</a></p>
+						</div>
+					</div>
+					<div class="carousel-item"> <img src="images/ie-big.jpg" class="d-block w-100" alt="5 slide">
+						<div class="carousel-caption d-none d-md-block">
+							<h1>IE</h1>
+							<p>Internet Explorer，简称 IE，是微软公司推出的一款网页浏览器。</p>
+							<p><a class="btn btn-lg btn-primary" href="http://ie.microsoft.com/" target="_blank"
+										role="button">点我下载</a></p>
+						</div>
+					</div>
+				</div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev"> 
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> 
+			  </a> 
+			  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next"> 
+					<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> 
+			  </a> 
+			</div>
+    </div>
+		<!--	主要内容	-->
+		<div class="container summary">
+			<!--	简介	-->
+		  <div class="row">
+        <div class="col-md-4">
+					<img class="img-circle" src="images/chrome-logo-small.jpg" alt="chrome">
+					<h2>Chrome</h2>
+					<p>Google Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。</p>
+					<p><a class="btn btn-default" href="#" role="button">点我下载</a></p>
+        </div>
+        <div class="col-md-4">
+					<img class="img-circle" src="images/firefox-logo-small.jpg" alt="firefox">
+					<h2>Firefox</h2>
+					<p>Mozilla Firefox，中文名通常称为“火狐”或“火狐浏览器”，是一个开源网页浏览器。</p>
+					<p><a class="btn btn-default" href="#" role="button">点我下载</a></p>
+        </div>
+        <div class="col-md-4">
+					<img class="img-circle" src="images/safari-logo-small.jpg" alt="safari">
+					<h2>Safari</h2>
+					<p>Safari，是苹果计算机的最新操作系统Mac OS X中的浏览器。</p>
+					<p><a class="btn btn-default" href="#" role="button">点我下载</a></p>
+        </div>
+      </div>			
+			<hr class="feature-divider">			
+			<!--	特性	-->			
+			<nav>
+        <div class="nav nav-tabs" role="tablist" id="nav-tablist"> 
+					<a class="nav-item nav-link active" id="nav-chrome-tab" data-toggle="tab" href="#nav-chrome" role="tab" aria-controls="nav-chrome" aria-selected="true">Chrome</a> 
+					<a class="nav-item nav-link" id="nav-firefox-tab" data-toggle="tab" href="#nav-firefox" role="tab" aria-controls="nav-firefox" aria-selected="false">Firefox</a> 
+					<a class="nav-item nav-link" id="nav-safari-tab" data-toggle="tab" href="#nav-safari" role="tab" aria-controls="nav-safari" aria-selected="false">Safari</a> 
+					<a class="nav-item nav-link" id="nav-opera-tab" data-toggle="tab" href="#nav-opera" role="tab" aria-controls="nav-opera" aria-selected="false">Opera</a>
+					<a class="nav-item nav-link" id="nav-ie-tab" data-toggle="tab" href="#nav-ie" role="tab" aria-controls="nav-ie" aria-selected="false">IE</a>
+				</div>
+      </nav>
+      <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="nav-chrome" role="tabpanel" aria-labelledby="nav-chrome-tab">
+					<div class="row feature">
+            <div class="col-md-7">
+              <h2 class="feature-heading">Google Chrome <span class="text-muted">使用最广的浏览器</span></h2>
+              <p class="lead">Google Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。该浏览器是基于其他开源软件所撰写，包括WebKit，目标是提升稳定性、速度和安全性，并创造出简单且有效率的使用者界面。</p>
+            </div>
+            <div class="col-md-5"> 
+							<img class="feature-image img-responsive" src="images/chrome-logo.jpg" alt="Chrome"> 
+						</div>
+          </div>
+				</div>
+        <div class="tab-pane fade" id="nav-firefox" role="tabpanel" aria-labelledby="nav-firefox-tab">
+					<div class="row feature">
+            <div class="col-md-5"> 
+							<img class="feature-image img-responsive" src="images/firefox-logo.jpg" alt="Firefox"> 
+						</div>
+            <div class="col-md-7">
+              <h2 class="feature-heading">Mozilla Firefox <span class="text-muted">美丽的狐狸</span> </h2>
+              <p class="lead">Mozilla Firefox，中文名通常称为“火狐”或“火狐浏览器”，是一个开源网页浏览器，使用Gecko引擎（非ie内核），支持多种操作系统如Windows、Mac和linux。</p>
+            </div>
+          </div>
+				</div>
+        <div class="tab-pane fade" id="nav-safari" role="tabpanel" aria-labelledby="nav-safari-tab">
+					<div class="row feature">
+            <div class="col-md-7">
+              <h2 class="feature-heading">Safari <span class="text-muted">Mac用户首选</span></h2>
+              <p class="lead">Safari，是苹果计算机的最新操作系统Mac OS X中的浏览器，使用了KDE的KHTML作为浏览器的运算核心。Safari在2003年1月7日首度发行测试版，并成为Mac OS X v10.3与之后的默认浏览器，也是iPhone与IPAD和iPod touch的指定浏览器。</p>
+            </div>
+            <div class="col-md-5"> 
+							<img class="feature-image img-responsive" src="images/safari-logo.jpg" alt="Safari"> </div>
+          </div>
+				</div>
+        <div class="tab-pane fade" id="nav-opera" role="tabpanel" aria-labelledby="nav-opera-tab">
+					<div class="row feature">
+            <div class="col-md-5"> 
+							<img class="feature-image img-responsive" src="images/opera-logo.jpg" alt="Opera"> </div>
+            <div class="col-md-7">
+              <h2 class="feature-heading">Opera <span class="text-muted">小众但易用</span> </h2>
+              <p class="lead">Opera浏览器，是一款挪威Opera Software ASA公司制作的支持多页面标签式浏览的网络浏览器。是跨平台浏览器可以在Windows、Mac和Linux三个操作系统平台上运行。.</p>
+            </div>
+          </div>
+				</div>
+        <div class="tab-pane fade" id="nav-ie" role="tabpanel" aria-labelledby="nav-ie-tab">
+					<div class="row feature">
+            <div class="col-md-7">
+              <h2 class="feature-heading">IE <span class="text-muted">你懂的</span></h2>
+              <p class="lead">Internet Explorer，原称Microsoft Internet Explorer(6版本以前)和Windows Internet Explorer(7，8，9，10版本)，简称IE，是美国微软公司推出的一款网页浏览器。它采用的排版引擎(俗称内核)为Trident。</p>
+            </div>
+            <div class="col-md-5"> 
+							<img class="feature-image img-responsive" src="images/ie-logo.jpg" alt="IE"> 
+						</div>
+          </div>
+				</div>
+      </div>				
+			<!--	关于	-->
+			<div class="modal" id="modal-about" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">关于</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
+            </div>
+            <div class="modal-body">
+              <p>慕课网隶属于北京慕课科技中心(有限合伙)，是一家从事互联网免费教学的网络教育公司。秉承“开拓、创新、公平、分享”的精神，将互联网特性全面的应用在教育领域，致力于为教育机构及求学者打造一站式互动在线教育品牌。</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal">了解了</button>
+            </div>
+          </div>
+        </div>
+      </div>		
+			<hr class="feature-divider">
+			<!--	页脚	-->
+			<footer>
+				<p class="float-right"><a href="#top">回到顶部</a></p>
+				<p>&copy; 2014 慕课网</p>
+			</footer>
+		</div>
+		
+<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+		
+		<script>			
+			$(function() {
+				$('#carousel-browser').carousel();
+				$('#dropdown-menu-nav a').click(function(e) {
+					let tabId = $(this).attr('id');
+
+					if (tabId != null && tabId != "") {
+						e.preventDefault();					
+						$(document).scrollTop($('#nav-' + tabId + '-tab').offset().top - 70);
+						$('#nav-' + tabId + '-tab').tab('show');
+					}
+				});
+			});
+		</script>
+	
+	</body>
 </html>
