--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-CN">
+<html lang="zh-cmn-Hans">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
